# internal/api/routes.go
@@ -20,6 +20,7 @@ func RegisterRoutes(r *chi.Mux, as services.ArtifactService, rs services.RekorSe
 	r.Get("/api/v1/trust/target", handler.GetApiV1TrustTarget)
 	r.Get("/api/v1/trust/targets/certificates", handler.GetApiV1TrustTargetsCertificates)
 	r.Get("/api/v1/trust/coverage", handler.GetApiV1TrustCoverage)
+	r.Get("/api/v1/system/health", handler.GetApiV1SystemHealth)
 	r.Get("/swagger-ui", handler.ServeSwaggerUI)
 	r.Get("/rhtas-console.yaml", handler.ServeOpenAPIFile)
 }
